HS-2830 scrollbars fix

--- a/css/src/layouts/enquiries-feed/_page-enquiries-feed.sass
+++ b/css/src/layouts/enquiries-feed/_page-enquiries-feed.sass
@@ -210,7 +210,7 @@
       position: absolute
       width: 100%
       height: 100%
-      overflow-y: scroll
+      overflow-y: auto
       padding-left: $left-nav-width
 
       +respond-to-size($screen-md)
